Fix contrast of links in challenge blocks

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1098,7 +1098,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #2876b5;
   text-decoration: none;
 }
 a:hover,
